--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <div class="content">
         <h1>AutoDCF</h1>
         <form action="">
-            <label for="ticker">Generate a simple DCF template with pre-filled historical data.</label>
+            <label for="ticker">Generate a simple DCF model with pre-filled historical data.</label>
             <input type="text" id="ticker" name="ticker" placeholder="Enter ticker symbol"required>
             <input type="submit" id="submit" value="Download">
         </form>
