--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
             <input type="text" id="ticker" name="ticker" placeholder="Enter ticker symbol"required>
             <input type="submit" id="submit" value="Download">
         </form>
-        <p>Bugs? Open an issue <a href="https://github.com/nikhilnd/AutoDCF/issues" target="_blank">here.</a></p>
+        <p class="bugs">Bugs? Open an issue <a href="https://github.com/nikhilnd/AutoDCF/issues" target="_blank">here.</a></p>
     </div>
     <div class="modal" style="display: none;">
         <div class="loading-content">
