--- a/static/style.css
+++ b/static/style.css
@@ -15,7 +15,7 @@ body {
     background-color: white;
     border: 1px solid black; 
     border-radius: 20px;
-    padding: 5% 5% 3% 5%; 
+    padding: 4.5% 5% 3% 5%; 
 
     -moz-box-shadow: 5px 15px 5px 0px #888;
     -webkit-box-shadow: 5px 15px 5px 0px #888;
@@ -125,7 +125,7 @@ input {
     background-color: #c89666;
 }
 
-p {
+.bugs {
     margin: 0; 
     padding: 0; 
     font-size: 12px; 
